--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "redux": "^4.2.0",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "^2.1.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
