--- a/package.json
+++ b/package.json
@@ -16,16 +16,15 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "jss-rtl": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-
-    "react-yup": "^1.24.1",
-
     "react-toastify": "^9.0.8",
+    "react-yup": "^1.24.1",
     "redux": "^4.2.0",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "^2.1.1",
