--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hichestan-datetimepicker": "^3.0.24",
-    "react-image-magnifiers": "^1.4.0",
+    "react-image-magnify": "^2.7.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
