--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.2",
     "formik": "^2.2.9",
     "jss-rtl": "^0.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-hichestan-datetimepicker": "^3.0.24",
     "react-image-magnify": "^2.7.4",
